fixed white space issues

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,8 +3,24 @@ img {
   filter: grayscale(100%)
   }
 
+  img:hover {
+  animation-name: img_hover;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-out;
+}
+
+@keyframes img_hover {
+  100% {filter: grayscale(0%)}
+}
+
+.bold {
+  font-weight: bold;
+}
+
+
+
 #landing {
-  background-color: blue;
   position: relative;
   min-height: 100vh;
   top: 150px;
@@ -14,17 +30,6 @@ img {
   margin: 50px auto;
   font-size: 30px;
   }
-
-  // .buttons:hover {
-  //   animation-name: button_background;
-  //   animation-duration: 1s;
-  //   animation-fill-mode: forwards;
-  //   animation-timing-function: ease-out;
-  // }
-
-  // @keyframes button_background {
-  //   100% {background-color: black}
-  // }
   a {
     color: black;
   }
@@ -32,7 +37,6 @@ img {
 
 
 #about_me {
-  background-color: beige;
   position: relative;
   min-height: 100vh;
   
@@ -53,10 +57,7 @@ img {
   }
 
   img:hover {
-    animation-name: img_hover;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-out;
+    animation-duration: .5s!important;
   }
 }
 
@@ -66,70 +67,79 @@ img {
 
 
 #toolbox {
-  // min-height: 100vh;
-  background-color: green;
   min-height: 100vh;
 
   .toolbox-container {
     position: relative;
-    // top: 150px;
+    top: 150px;
   }
-}
 
-
-.toolbox h2 {
+  h2 {
   margin: 40px auto;
   font-size: 60px;
 }
 
-.toolbox_progress_bar_title img {
-  position: relative;
-  top: 5px;
-  height: 75px;
+  .toolbox_progress_bar_title {
+    img {
+    position: relative;
+    top: 5px;
+    height: 75px;
+    }
+  }
+
+  .router_logo {
+    position: relative;
+    top: 20px!important;
+    height: 50px!important;
+    width: 75px;
+  }
+
+  .npm_logo {
+    position: relative;
+    top: 20px!important;
+    height: 50px!important;
+    width: 75px;
+  }
+
+  .toolbox_progress_bar {
+    height: 20px;
+    /*border: 1px solid black;*/
+    margin: 30px 20px;
+    /*background-color: background-image: -webkit-gradient(linear, left, right, from(black 55%),white 10%));*/
+    background-image: -webkit-linear-gradient(left, black 55%, white 10%);
+    background-image: -moz-linear-gradient(left, black 55%, white 10%);
+    background-image: linear-gradient(to right, black 55%, white 10%);
+    box-shadow: inset 1px 1px 10px #ccc;
+  }
+
+  .toolbox_progress_bar_position {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: black;
+    position: relative;
+    left: 80%;
+    bottom: 10px;
+    color: white;
+     p {
+      position: relative;
+      text-align: center;
+      top: 10px;
+      font-size: 14px;  
+      } 
+  }
+
+
+   
+  
 }
 
-.router_logo {
-  position: relative;
-  top: 20px!important;
-  height: 50px!important;
-  width: 75px;
-}
 
-.npm_logo {
-  position: relative;
-  top: 20px!important;
-  height: 50px!important;
-  width: 75px;
-}
 
-.toolbox_progress_bar {
-  height: 20px;
-  /*border: 1px solid black;*/
-  margin: 30px 20px;
-  /*background-color: background-image: -webkit-gradient(linear, left, right, from(black 55%),white 10%));*/
-  background-image: -webkit-linear-gradient(left, black 55%, white 10%);
-  background-image: -moz-linear-gradient(left, black 55%, white 10%);
-  background-image: linear-gradient(to right, black 55%, white 10%);
-  box-shadow: inset 1px 1px 10px #ccc;
-}
 
-.toolbox_progress_bar_position {
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  background-color: black;
-  position: relative;
-  left: 50%;
-  bottom: 10px;
-  color: white;
-}
 
-.toolbox_progress_bar_position p {
-  position: relative;
-  text-align: center;
-  top: 10px;
-  font-size: 14px;  
-}
+
+
 
 
 
@@ -147,102 +157,10 @@ img {
 #projects {
   position: relative;
   min-height: 100vh;
-  background-color: red;
 
   .well {
   margin-top: 30px;
-  }
-}
-
-
-#project img {
-  /*height: 300px;*/
-  filter: grayscale(100%)
-}
-
-#project img:hover {
-  animation-name: img_hover;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-timing-function: ease-out;
-}
-
-@keyframes img_hover {
-  100% {filter: grayscale(0%)}
-}
-
-.bold {
-  font-weight: bold;
-}
-
-#contact_me {
-  min-height: 100vh;
-  background-color: rgba(233, 233, 100, .5);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.chop_tribute {
-  position: relative;
-  width: 100px;
-}
-
-
-
-body .modal-chop, .modal-pomo {
-    /* new custom width */
-    max-width: 1100px;
-    /* must be half of the width, minus scrollbar on the left (30px) */
-    margin: 0 auto;
-}
-
-body .modal-simon {
-    /* new custom width */
-    max-width: 820px;
-    /* must be half of the width, minus scrollbar on the left (30px) */
-    margin: 0 auto;
-}
-
-.modal-chop .well {
-  max-width: 800px;
-}
-
-.modal-pomo #controls{
-  max-width: 800px;
-}
-
-#projects {
-  position: relative;
-  top: 30vh;
-  .well {
-    border-radius: 0;
+  border-radius: 0;
   }
   .panel-group {
     .panel {
@@ -257,5 +175,40 @@ body .modal-simon {
       color: black;
     }
   }
-  
+}
+
+
+
+
+
+#contact_me {
+  min-height: 100vh;
+  div {
+  position: relative;
+  margin: auto auto;
+  top: 30vh;
+  }
+}
+
+body { 
+    .modal-chop, .modal-pomo {
+    max-width: 1100px;
+    margin: 0 auto;
+    }
+    .modal-simon {
+    max-width: 820px;
+    margin: 0 auto;
+  }
+}
+
+.modal-chop {
+  .well {
+  max-width: 800px;
+  }
+}
+
+.modal-pomo {
+  #controls{
+  max-width: 800px;
+  }
 }
